--- a/Core/View/Login/Login.html.twig
+++ b/Core/View/Login/Login.html.twig
@@ -14,6 +14,13 @@
                         <div class="card-body">
                             <p class="card-text text-center">{{ trans('login-text') }}</p>
                             <div class="form-group">
+
+
+
+                                {{ WidgetText(fsc.user, 'fsNick') }}
+
+
+
                                 <div class="input-group">
                                     <span class="input-group-prepend">
                                         <span class="input-group-text">
