--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -113,14 +113,17 @@
                                     <i class="fas fa-question-circle" aria-hidden="true"></i>
                                 </a>
                             </li>
-                            <li class="nav-item dropdown" title="{{ trans('user') }}">
+                            <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle mr-md-2" href="#" data-toggle="dropdown"
-                                   aria-haspopup="true" aria-expanded="false" id="menuIconUser">
+                                   aria-haspopup="true" aria-expanded="false" id="menuIconUser" title="{{ trans('user') }}">
                                     <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-list">
-                                    <a class="dropdown-item" href="{{ fsc.user.url() }}">
+                                    <a class="dropdown-item" href="{{ fsc.user.url() }}" title="{{ trans('user') }}">
                                         <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i> {{ fsc.user.nick }}
+                                    </a>
+                                    <a class="dropdown-item send-email" href="/SendMail" title="{{ trans('send-email') }}">
+                                        <i class="fas fa-envelope fa-fw" aria-hidden="true"></i> {{ trans('email') }}
                                     </a>
                                     {% for item in getIncludeViews('MenuTemplate', 'MenuIconUser') %}
                                         {% include item['path'] %}
