--- a/Core/View/Master/MenuTemplateB5.html.twig
+++ b/Core/View/Master/MenuTemplateB5.html.twig
@@ -17,161 +17,14 @@
  * along with this program. If not, see http://www.gnu.org/licenses/.
  */
 #}
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="{{ constant('FS_LANG') | slice(0, 2) }}"
-      xml:lang="{{ constant('FS_LANG') | slice(0, 2) }}">
-<head>
-    {% for item in getIncludeViews('MenuTemplate', 'HeadFirst') %}
-        {% include item['path'] %}
-    {% endfor %}
-    {% block meta %}
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <title>{{ fsc.title | raw }}</title>
-        <meta name="description" content="{{ trans('meta-description') }}"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta name="generator" content="FacturaScripts"/>
-        <meta name="robots" content="noindex"/>
-    {% endblock %}
-    {% block icons %}
-        <link rel="shortcut icon" href="{{ asset('Dinamic/Assets/Images/favicon.ico') }}"/>
-        <link rel="apple-touch-icon" sizes="180x180"
-              href="{{ asset('Dinamic/Assets/Images/apple-icon-180x180.png') }}"/>
-    {% endblock %}
-    {% for item in getIncludeViews('MenuTemplate', 'CssBefore') %}
-        {% include item['path'] %}
-    {% endfor %}
-    {% block css %}
-        <link rel="stylesheet" href="{{ asset('node_modules/bootstrap/dist/css/bootstrap.min.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('node_modules/bootstrap5/dist/css/bootstrap.min.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('node_modules/@fortawesome/fontawesome-free/css/all.min.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('Dinamic/Assets/CSS/custom.css') }}?v={{ 'now' | date('ymd') }}"/>
-    {% endblock %}
-    {# Adds custom CSS assets #}
-    {% for css in assetManager.get('css') %}
-        <link rel="stylesheet" href="{{ css }}"/>
-    {% endfor %}
-    {% for item in getIncludeViews('MenuTemplate', 'CssAfter') %}
-        {% include item['path'] %}
-    {% endfor %}
-    {% for item in getIncludeViews('MenuTemplate', 'JsHeadBefore') %}
-        {% include item['path'] %}
-    {% endfor %}
-    {% block javascripts %}
-        <script src="{{ asset('node_modules/jquery/dist/jquery.min.js') }}"></script>
-        <script src="{{ asset('node_modules/bootstrap/dist/js/bootstrap.min.js') }}"></script>
-        <script src="{{ asset('node_modules/bootstrap5/dist/js/bootstrap.min.js') }}"></script>
-        <script src="{{ asset('node_modules/bootbox/dist/bootbox.min.js') }}"></script>
-        <script src="{{ asset('node_modules/bootbox/dist/bootbox.locales.min.js') }}"></script>
-        <script src="{{ asset('node_modules/pace-js/pace.min.js') }}"></script>
-        <script src="{{ asset('node_modules/@fortawesome/fontawesome-free/js/all.min.js') }}"></script>
-        <script src="{{ asset('Dinamic/Assets/JS/Custom.js') }}?v={{ 'now' | date('ymd') }}"></script>
-    {% endblock %}
-    {# Adds custom JS assets #}
-    {% for js in assetManager.get('js') %}
-        <script src="{{ js }}"></script>
-    {% endfor %}
-    {% for item in getIncludeViews('MenuTemplate', 'JsHeadAfter') %}
-        {% include item['path'] %}
-    {% endfor %}
-    {{ debugBarRender.renderHead() | raw }}
-    {% for item in getIncludeViews('MenuTemplate', 'HeadEnd') %}
-        {% include item['path'] %}
-    {% endfor %}
-</head>
-{% block fullBody %}
-    <body>
-    {% for item in getIncludeViews('MenuTemplate', 'BodyFirst') %}
-        {% include item['path'] %}
-    {% endfor %}
-    {% block navbar %}
-        <nav class="navbar navbar-expand navbar-dark bg-primary sticky-top d-print-none">
-            {% block navbarContent %}
-                <a class="navbar-brand d-none d-sm-inline" href="{{ asset('') }}" title="{{ trans('homepage') }}">
-                    <img src="{{ asset('Dinamic/Assets/Images/logo-white.png') }}" width="30" height="30"
-                         class="d-inline-block align-top" alt="FacturaScripts"/>
-                    <span class="d-none d-xl-inline-block">{{ fsc.empresa.nombrecorto | raw }}</span>
-                </a>
-                <div class="navbar-collapse collapse">
-                    <ul class="navbar-nav pt-1">
-                        {% import 'Macro/Menu.html.twig' as macros %}
-                        {% for menuItem in menuManager.getMenu() %}
-                            {{ macros.showMenu(menuItem) }}
-                        {% endfor %}
-                    </ul>
-                    <ul class="navbar-nav flex-row ml-auto">
-                        {% block navbarMenuIcon %}
-                            {% for item in getIncludeViews('MenuTemplate', 'MenuIconBefore') %}
-                                {% include item['path'] %}
-                            {% endfor %}
-                            <li class="nav-item{{ template == 'MegaSearch.html.twig' ? ' active' : '' }}"
-                                title="{{ trans('search') }}">
-                                <a class="nav-link" href="MegaSearch" id="menuIconSearch">
-                                    <i class="fas fa-search" aria-hidden="true"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item" title="{{ trans('help') }}">
-                                <a class="nav-link" href="https://facturascripts.com/ayuda" rel="nofollow"
-                                   target="_blank" id="menuIconHelp">
-                                    <i class="fas fa-question-circle" aria-hidden="true"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item dropdown" title="{{ trans('user') }}">
-                                <a class="nav-link dropdown-toggle mr-md-2" href="#" data-toggle="dropdown"
-                                   aria-haspopup="true" aria-expanded="false" id="menuIconUser">
-                                    <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-list">
-                                    <a class="dropdown-item" href="{{ fsc.user.url() }}">
-                                        <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i> {{ fsc.user.nick }}
-                                    </a>
-                                    {% for item in getIncludeViews('MenuTemplate', 'MenuIconUser') %}
-                                        {% include item['path'] %}
-                                    {% endfor %}
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="?logout=TRUE">
-                                        <i class="fas fa-door-open fa-fw" aria-hidden="true"></i> {{ trans('logout') }}
-                                    </a>
-                                </div>
-                            </li>
-                            {% for item in getIncludeViews('MenuTemplate', 'MenuIconAfter') %}
-                                {% include item['path'] %}
-                            {% endfor %}
-                        {% endblock %}
-                    </ul>
-                </div>
-            {% endblock %}
-        </nav>
-    {% endblock %}
-    <div class="pt-3">
-        {% block messages %}
-            {% include 'Macro/Toasts.html.twig' %}
-            {% from 'Macro/Utils.html.twig' import message as showMessage %}
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12">
-                        {{ showMessage(log, ['error', 'critical'], 'danger') }}
-                        {{ showMessage(log, ['warning'], 'warning') }}
-                        {{ showMessage(log, ['notice'], 'success') }}
-                        {{ showMessage(log, ['info'], 'info') }}
-                    </div>
-                </div>
-            </div>
-        {% endblock %}
-        {% block bodyHeaderOptions %}
-        {% endblock %}
-    </div>
-    {% block body %}
-    {% endblock %}
-    {% for item in getIncludeViews('MenuTemplate', 'JsFooter') %}
-        {% include item['path'] %}
-    {% endfor %}
-    <br/>
-    <br/>
-    <br/>
-    {{ debugBarRender.render() | raw }}
-    {% for item in getIncludeViews('MenuTemplate', 'BodyEnd') %}
-        {% include item['path'] %}
-    {% endfor %}
-    </body>
+{% extends "Master/MenuTemplate.html.twig" %}
+
+{% block css %}
+        {{ parent() }}
+        <link rel="stylesheet" href="{{ asset('node_modules/bootstrap5/dist/css/bootstrap.min.css') }}" />
 {% endblock %}
-</html>
+
+{% block javascripts %}
+        {{ parent() }}
+        <script src="{{ asset('node_modules/bootstrap5/dist/js/bootstrap.min.js') }}"></script>
+{% endblock %}
