--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -119,11 +119,11 @@
                                     <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-list">
-                                    <a class="dropdown-item" href="{{ fsc.user.url() }}" title="{{ trans('user') }}">
+                                    <a class="dropdown-item" href="{{ fsc.user.url() }}">
                                         <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i> {{ fsc.user.nick }}
                                     </a>
-                                    <a class="dropdown-item send-email" href="/SendMail" title="{{ trans('send-email') }}">
-                                        <i class="fas fa-envelope fa-fw" aria-hidden="true"></i> {{ trans('email') }}
+                                    <a class="dropdown-item send-email" href="SendMail">
+                                        <i class="fas fa-envelope fa-fw" aria-hidden="true"></i> {{ trans('send-mail') }}
                                     </a>
                                     {% for item in getIncludeViews('MenuTemplate', 'MenuIconUser') %}
                                         {% include item['path'] %}
