--- a/Core/View/Tab/EmailSentHtml.html.twig
+++ b/Core/View/Tab/EmailSentHtml.html.twig
@@ -1,7 +1,16 @@
 {% set firstView = fsc.views | first %}
 {% set model = firstView.model %}
 
-<div class="card" id="email-html"></div>
+<div class="card shadow mb-4" id="email-html">
+    <div class="card-body">
+        <div class="row">
+            <div class="col-12 text-center mb-4">
+                <h4>{{ trans('loading') }}</h4>
+                <i class="fas fa-circle-notch fa-5x fa-spin"></i>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script>
     let formData = new FormData();
@@ -18,19 +27,21 @@
         return Promise.reject(response);
     }).then(function (data) {
         if (data.getHtml) {
+            $('#email-html').html('');
+
             // creamos un div
-            var div = document.createElement('div');
+            let div = document.createElement('div');
             div.className = 'message-content';
             $('#email-html').prepend(div);
 
             // obtenemos el div con la clase message-content
-            var content = document.querySelector('#email-html div.message-content');
+            let content = document.querySelector('#email-html div.message-content');
 
             // obtenemos el shadow del div
-            var shadow = content.attachShadow({mode: "open"});
+            let shadow = content.attachShadow({mode: "open"});
 
             // creamos un elemento html
-            var html = document.createElement('html');
+            let html = document.createElement('html');
             html.innerHTML = data.html;
 
             // añadimos el html al shadow
