Ahora podemos buscar por subfamilia en el modal de productos al hacer compras o ventas.

--- a/Core/View/Tab/PurchasesDocument.html.twig
+++ b/Core/View/Tab/PurchasesDocument.html.twig
@@ -93,7 +93,7 @@
             method: 'POST',
             body: data
         }).then(function (response) {
-            animateSpinner('remove', true);
+            animateSpinner('remove');
             if (response.ok) {
                 return response.json();
             }
