Añadido el tipo notice al toast

--- a/Core/View/Macro/Toasts.html.twig
+++ b/Core/View/Macro/Toasts.html.twig
@@ -40,6 +40,7 @@
                 title = title !== '' ? title : '{{ trans('processing') }}';
                 break;
 
+            case 'notice':
             case 'success':
                 styleHeader = 'bg-success text-white';
                 styleBorder = 'border border-success';
