--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -97,41 +97,49 @@
                         {% endfor %}
                     </ul>
                     <ul class="navbar-nav flex-row ml-auto">
-                        {% for item in getIncludeViews('MenuTemplate', 'MenuIconBefore') %}
-                            {% include item['path'] %}
-                        {% endfor %}
-                        <li class="nav-item{{ template == 'MegaSearch.html.twig' ? ' active' : '' }}"
-                            title="{{ trans('search') }}">
-                            <a class="nav-link" href="{{ asset('MegaSearch') }}">
-                                <i class="fas fa-search" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li class="nav-item" title="{{ trans('help') }}">
-                            <a class="nav-link" href="https://facturascripts.com/ayuda" rel="nofollow" target="_blank">
-                                <i class="fas fa-question-circle" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li class="nav-item dropdown" title="{{ trans('user') }}">
-                            <a class="nav-link dropdown-toggle mr-md-2" href="#" data-toggle="dropdown"
-                               aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-list">
-                                <a class="dropdown-item" href="{{ fsc.user.url() }}">
-                                    <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i> {{ fsc.user.nick }}
+                        {% block navbarMenuIcon %}
+                            {% for item in getIncludeViews('MenuTemplate', 'MenuIconBefore') %}
+                                {% include item['path'] %}
+                            {% endfor %}
+                            <li class="nav-item{{ template == 'MegaSearch.html.twig' ? ' active' : '' }}"
+                                title="{{ trans('search') }}">
+                                <a class="nav-link" href="MegaSearch" id="menuIconSearch">
+                                    <i class="fas fa-search" aria-hidden="true"></i>
                                 </a>
-                                {% for item in getIncludeViews('MenuTemplate', 'MenuIconUser') %}
-                                    {% include item['path'] %}
-                                {% endfor %}
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="{{ asset('login') }}?action=logout&multireqtoken={{ formToken(false) }}">
-                                    <i class="fas fa-door-open fa-fw" aria-hidden="true"></i> {{ trans('logout') }}
+                            </li>
+                            <li class="nav-item" title="{{ trans('help') }}">
+                                <a class="nav-link" href="https://facturascripts.com/ayuda" rel="nofollow"
+                                   target="_blank" id="menuIconHelp">
+                                    <i class="fas fa-question-circle" aria-hidden="true"></i>
                                 </a>
-                            </div>
-                        </li>
-                        {% for item in getIncludeViews('MenuTemplate', 'MenuIconAfter') %}
-                            {% include item['path'] %}
-                        {% endfor %}
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle mr-md-2" href="#" data-toggle="dropdown"
+                                   aria-haspopup="true" aria-expanded="false" id="menuIconUser"
+                                   title="{{ trans('user') }}">
+                                    <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
+                                </a>
+                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-list">
+                                    <a class="dropdown-item" href="{{ fsc.user.url() }}">
+                                        <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i> {{ fsc.user.nick }}
+                                    </a>
+                                    <a class="dropdown-item send-email" href="SendMail">
+                                        <i class="fas fa-envelope fa-fw" aria-hidden="true"></i>
+                                        {{ trans('send-mail') }}
+                                    </a>
+                                    {% for item in getIncludeViews('MenuTemplate', 'MenuIconUser') %}
+                                        {% include item['path'] %}
+                                    {% endfor %}
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="{{ asset('login') }}?action=logout&multireqtoken={{ formToken(false) }}">
+                                        <i class="fas fa-door-open fa-fw" aria-hidden="true"></i> {{ trans('logout') }}
+                                    </a>
+                                </div>
+                            </li>
+                            {% for item in getIncludeViews('MenuTemplate', 'MenuIconAfter') %}
+                                {% include item['path'] %}
+                            {% endfor %}
+                        {% endblock %}
                     </ul>
                 </div>
             {% endblock %}
