--- a/Core/View/MegaSearch.html.twig
+++ b/Core/View/MegaSearch.html.twig
@@ -37,7 +37,7 @@
                             <input type="text" name="query" value="{{ fsc.query }}" class="form-control form-control-lg"
                                    autocomplete="off" autofocus=""/>
                             <span class="input-group-append">
-                                <button type="submit" class="btn-spin-action btn btn-primary">
+                                <button type="submit" class="btn btn-spin-action btn-primary">
                                     <i class="fas fa-search" aria-hidden="true"></i>
                                 </button>
                             </span>
