--- a/Core/View/Tab/RefundFacturaCliente.html.twig
+++ b/Core/View/Tab/RefundFacturaCliente.html.twig
@@ -124,7 +124,7 @@
                                     </div>
                                 </div>
                                 <div class="btn-group mb-3 ml-3">
-                                    <button type="submit" class="btn-spin-action btn btn-warning">
+                                    <button type="submit" class="btn btn-spin-action btn-warning">
                                         <i class="fas fa-save fa-fw" aria-hidden="true"></i> {{ trans('save') }}
                                     </button>
                                 </div>
