--- a/Core/View/Tab/RefundFacturaProveedor.html.twig
+++ b/Core/View/Tab/RefundFacturaProveedor.html.twig
@@ -130,7 +130,7 @@
                                     </div>
                                 </div>
                                 <div class="btn-group mb-3">
-                                    <button type="submit" class="btn-spin-action btn btn-warning ml-3">
+                                    <button type="submit" class="btn btn-spin-action btn-warning ml-3">
                                         <i class="fas fa-save fa-fw" aria-hidden="true"></i> {{ trans('save') }}
                                     </button>
                                 </div>
