--- a/Core/View/Updater.html.twig
+++ b/Core/View/Updater.html.twig
@@ -88,23 +88,23 @@
                         {% if item.mincore > fsc.getCoreVersion() %}
                             {{ trans('requires-core', {'%version%': item.mincore}) }}
                         {% elseif item.downloaded %}
-                            <a href="{{ fsc.url() }}?action=update&item={{ item.id }}" class="btn-spin-action btn btn-sm btn-success" onclick="animateSpinner('add')">
+                            <a href="{{ fsc.url() }}?action=update&item={{ item.id }}" class="btn btn-spin-action btn-sm btn-success" onclick="animateSpinner('add')">
                                 <i class="fas fa-rocket fa-fw" aria-hidden="true"></i> {{ trans('update') }}
                             </a>
-                            <a href="{{ fsc.url() }}?action=cancel&item={{ item.id }}" class="btn-spin-action btn btn-sm btn-warning" onclick="animateSpinner('add')">
+                            <a href="{{ fsc.url() }}?action=cancel&item={{ item.id }}" class="btn btn-spin-action btn-sm btn-warning" onclick="animateSpinner('add')">
                                 <i class="fas fa-times fa-fw" aria-hidden="true"></i> {{ trans('cancel') }}
                             </a>
                         {% elseif item.name == 'CORE' and fsc.coreUpdateWarnings %}
-                            <button type="button" class="btn-spin-action btn btn-warning" data-toggle="modal"
+                            <button type="button" class="btn btn-spin-action btn-warning" data-toggle="modal"
                                     data-target="#coreWarningModal">{{ trans('download') }}
                             </button>
                         {% elseif item.stable %}
                             <a href="{{ fsc.url() }}?action=download&item={{ item.id }}"
-                               class="btn-spin-action btn btn-sm btn-secondary" onclick="animateSpinner('add')">{{ trans('download') }}
+                               class="btn btn-spin-action btn-sm btn-secondary" onclick="animateSpinner('add')">{{ trans('download') }}
                             </a>
                         {% else %}
                             <a href="{{ fsc.url() }}?action=download&item={{ item.id }}"
-                               class="btn-spin-action btn btn-sm btn-outline-warning" onclick="animateSpinner('add')">{{ trans('beta') }}
+                               class="btn btn-spin-action btn-sm btn-outline-warning" onclick="animateSpinner('add')">{{ trans('beta') }}
                             </a>
                         {% endif %}
                     </td>
@@ -139,7 +139,7 @@
                             <div class="col text-right">
                                 <form action="{{ fsc.url() }}" method="post" onsubmit="animateSpinner('add')">
                                     <input type="hidden" name="action" value="unlink"/>
-                                    <button type="submit" class="btn-spin-action btn btn-danger">
+                                    <button type="submit" class="btn btn-spin-action btn-danger">
                                         {{ trans('unlink') }}
                                     </button>
                                 </form>
@@ -159,7 +159,7 @@
                         <div class="modal-body">
                             <p>{{ trans('register-installation-p') }}</p>
                             <p>{{ trans('telemetry-data-to-send') }}</p>
-                            <button type="submit" class="btn-spin-action btn btn-primary">
+                            <button type="submit" class="btn btn-spin-action btn-primary">
                                 {{ trans('register-installation') }}
                             </button>
                         </div>
@@ -193,9 +193,9 @@
                             {% if item.name == 'CORE' and fsc.coreUpdateWarnings %}
                                 <div class="btn-group">
                                     <a href="{{ fsc.url() }}?action=download&item={{ item.id }}&disable={{ fsc.coreUpdateWarnings | keys | join(',') }}"
-                                       class="btn-spin-action btn btn-warning" onclick="animateSpinner('add')">{{ trans('download') }}
+                                       class="btn btn-spin-action btn-warning" onclick="animateSpinner('add')">{{ trans('download') }}
                                     </a>
-                                    <button type="button" class="btn-spin-action btn btn-warning dropdown-toggle dropdown-toggle-split"
+                                    <button type="button" class="btn btn-spin-action btn-warning dropdown-toggle dropdown-toggle-split"
                                             data-toggle="dropdown" aria-expanded="false">
                                         <span class="sr-only">{{ trans('options') }}</span>
                                     </button>
