--- a/Core/View/CopyProducto.html.twig
+++ b/Core/View/CopyProducto.html.twig
@@ -63,7 +63,7 @@
                         </div>
                         <div class="card-footer">
                             <div class="text-right">
-                                <button type="submit" class="btn-spin-action btn btn-primary">
+                                <button type="submit" class="btn btn-spin-action btn-primary">
                                     <i class="fas fa-save"></i> {{ trans('save') }}
                                 </button>
                             </div>
