--- a/Core/View/EditPageOption.html.twig
+++ b/Core/View/EditPageOption.html.twig
@@ -54,7 +54,7 @@
                         <span class="text-info">{{ fsc.selectedViewName }}</span>
                     </div>
                     <div class="card-body">
-                        <form method="post" onsubmit="animateSpinner('add')">
+                        <form method="post">
                             <input type="hidden" name="code" value="{{ fsc.selectedViewName }}"/>
                             <div class="form-row">
                                 <div class="col">
@@ -112,7 +112,7 @@
                             <div class="form-row">
                                 {% if fsc.model.exists() %}
                                     <div class="col">
-                                        <button class="btn-spin-action btn btn-sm btn btn-danger" type="button"
+                                        <button class="btn btn-spin-action btn-sm btn btn-danger" type="button"
                                                 onclick="deleteOptions();">
                                             <i class="fas fa-trash-alt fa-fw" aria-hidden="true"></i>
                                             {{ trans('delete') }}
@@ -120,10 +120,10 @@
                                     </div>
                                 {% endif %}
                                 <div class="col text-right">
-                                    <button class="btn-spin-action btn btn-sm btn btn-secondary" type="reset">
+                                    <button class="btn btn-spin-action btn-sm btn btn-secondary" type="reset">
                                         <i class="fas fa-undo fa-fw" aria-hidden="true"></i> {{ trans('undo') }}
                                     </button>
-                                    <button class="btn-spin-action btn btn-sm btn-primary" type="submit">
+                                    <button class="btn btn-spin-action btn-sm btn-primary" type="submit">
                                         <i class="fas fa-save fa-fw" aria-hidden="true"></i> {{ trans('save') }}
                                     </button>
                                 </div>
@@ -164,8 +164,8 @@
                 },
                 callback: function (result) {
                     if (result) {
+                        animateSpinner('add');
                         document.main_form.action.value = 'delete';
-                        document.main_form.onsubmit();
                         document.main_form.submit();
                     }
                 }
