--- a/Core/View/Master/EditListView.html.twig
+++ b/Core/View/Master/EditListView.html.twig
@@ -48,7 +48,7 @@
             <input type="hidden" name="activetab" value="{{ currentView.getViewName() }}"/>
             <div class="card border-success shadow mb-2">
                 <div class="card-body p-2">
-                    <button class="btn-spin-action btn btn-sm btn-outline-success mr-1" type="button" data-toggle="collapse"
+                    <button class="btn btn-spin-action btn-sm btn-outline-success mr-1" type="button" data-toggle="collapse"
                             data-target="#{{ formName }}Collapse" aria-expanded="false">
                         <i class="fas fa-plus-square fa-fw" aria-hidden="true"></i>
                         {{ trans('add') }}
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                     <div class="card-footer text-right p-2">
-                        <button class="btn-spin-action btn btn-sm btn-success" type="submit">
+                        <button class="btn btn-spin-action btn-sm btn-success" type="submit">
                             <i class="fas fa-save fa-fw" aria-hidden="true"></i>
                             <span class="d-none d-sm-inline-block">{{ trans('save') }}</span>
                         </button>
@@ -94,7 +94,7 @@
                     <div class="form-row">
                         {% if currentView.settings.btnDelete %}
                             <div class="col-auto">
-                                <button type="button" class="btn-spin-action btn btn-sm btn-danger"
+                                <button type="button" class="btn btn-spin-action btn-sm btn-danger"
                                         onclick="editListViewDelete('{{ currentView.getViewName() ~ counter }}');">
                                     <i class="fas fa-trash-alt fa-fw" aria-hidden="true"></i>
                                     <span class="d-none d-sm-inline-block">{{ trans('delete') }}</span>
@@ -108,13 +108,13 @@
                         </div>
                         <div class="col-auto">
                             {% if currentView.settings.btnUndo %}
-                                <button class="btn-spin-action btn btn-sm btn-secondary" type="reset">
+                                <button class="btn btn-spin-action btn-sm btn-secondary" type="reset">
                                     <i class="fas fa-undo fa-fw" aria-hidden="true"></i>
                                     <span class="d-none d-sm-inline-block">{{ trans('undo') }}</span>
                                 </button>
                             {% endif %}
                             {% if currentView.settings.btnSave %}
-                                <button class="btn-spin-action btn btn-sm btn-primary" type="submit">
+                                <button class="btn btn-spin-action btn-sm btn-primary" type="submit">
                                     <i class="fas fa-save fa-fw" aria-hidden="true"></i>
                                     <span class="d-none d-sm-inline-block">{{ trans('save') }}</span>
                                 </button>
