--- a/Core/View/Master/EditListViewInLine.html.twig
+++ b/Core/View/Master/EditListViewInLine.html.twig
@@ -48,7 +48,7 @@
             <input type="hidden" name="activetab" value="{{ currentView.getViewName() }}"/>
             <div class="card border-success shadow mb-2">
                 <div class="card-body p-2">
-                    <button class="btn-spin-action btn btn-sm btn-outline-success" type="button" data-toggle="collapse" data-target="#{{ formName }}Collapse" aria-expanded="false">
+                    <button class="btn btn-spin-action btn-sm btn-outline-success" type="button" data-toggle="collapse" data-target="#{{ formName }}Collapse" aria-expanded="false">
                         <i class="fas fa-plus-square fa-fw" aria-hidden="true"></i>
                         {{ trans('add') }}
                     </button>
@@ -64,7 +64,7 @@
                                 {% endfor %}
                             </div>
                             <div class="col-sm-2 text-right">
-                                <button class="btn-spin-action btn btn-sm btn-success" type="submit">
+                                <button class="btn btn-spin-action btn-sm btn-success" type="submit">
                                     <i class="fas fa-save fa-fw" aria-hidden="true"></i>
                                     <span class="d-none d-sm-inline-block">{{ trans('save') }}</span>
                                 </button>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="col-sm-2 text-right pb-2 pr-3">
                         {% if currentView.settings.btnDelete %}
-                            <button type="button" class="btn-spin-action btn btn-sm btn-danger" title="{{ trans('delete') }}"
+                            <button type="button" class="btn btn-spin-action btn-sm btn-danger" title="{{ trans('delete') }}"
                                     onclick="editListViewDelete('{{ currentView.getViewName() ~ counter }}');">
                                 <i class="fas fa-trash-alt fa-fw" aria-hidden="true"></i>
                             </button>
@@ -102,12 +102,12 @@
                         {% set row = currentView.getRow('actions') %}
                         {{ row.render(false, currentView.getViewName() ~ counter) | raw }}
                         {% if currentView.settings.btnUndo %}
-                            <button class="btn-spin-action btn btn-sm btn-secondary" type="reset" title="{{ trans('undo') }}">
+                            <button class="btn btn-spin-action btn-sm btn-secondary" type="reset" title="{{ trans('undo') }}">
                                 <i class="fas fa-undo fa-fw" aria-hidden="true"></i>
                             </button>
                         {% endif %}
                         {% if currentView.settings.btnSave %}
-                            <button class="btn-spin-action btn btn-sm btn-primary" type="submit" title="{{ trans('save') }}">
+                            <button class="btn btn-spin-action btn-sm btn-primary" type="submit" title="{{ trans('save') }}">
                                 <i class="fas fa-save fa-fw" aria-hidden="true"></i>
                             </button>
                         {% endif %}
