--- a/Core/View/ReportTaxes.html.twig
+++ b/Core/View/ReportTaxes.html.twig
@@ -28,7 +28,7 @@
 {% endblock %}
 
 {% block body %}
-    <form id="fReportTaxes" method="post" onsubmit="animateSpinner('add')">
+    <form id="fReportTaxes" method="post">
         {{ formToken() }}
         <input type="hidden" name="action" value="export"/>
         <input type="hidden" name="source" value="sales"/>
@@ -145,13 +145,13 @@
                             <div class="form-row">
                                 <div class="col-sm">
                                     <button type="button" onclick="sendReportTaxes('purchases')"
-                                            class="btn-spin-action btn btn-block btn-secondary btn-spin-action">
+                                            class="btn btn-spin-action btn-block btn-secondary btn-spin-action">
                                         {{ trans('purchases') }}
                                     </button>
                                 </div>
                                 <div class="col-sm">
                                     <button type="button" onclick="sendReportTaxes('sales')"
-                                            class="btn-spin-action btn btn-block btn-primary btn-spin-action">
+                                            class="btn btn-spin-action btn-block btn-primary btn-spin-action">
                                         {{ trans('sales') }}
                                     </button>
                                 </div>
@@ -169,8 +169,8 @@
     <script>
         function sendReportTaxes(source) {
             let form = document.getElementById('fReportTaxes');
+            animateSpinner('add');
             form.source.value = source;
-            form.onsubmit();
             form.submit();
         }
     </script>
